# csformula

./: .gitignore  CMakeLists.txt  README.md  main.cpp
csformula/: CMakeLists.txt  cseval.cpp  cseval.h  csformula.cpp  csformula.h
tests/csformulatest/: CMakeLists.txt  csformulatest.cpp
